--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "dayjs": "^1.8.14",
+    "glob": "^7.1.4",
+    "mongoose": "^5.6.9",
+    "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
   }
