--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "dayjs": "^1.8.14",
-    "glob": "^7.1.4",
+    "dayjs": "^1.8.34",
+    "glob": "^7.1.6",
+    "got": "^11.5.2",
     "mongoose": "^5.6.9",
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
