--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "scripts": {
+    "buildDoc": "jsdoc -c jsdoc.json"
   }
 }
