--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "dayjs": "^1.8.34",
     "glob": "^7.1.6",
     "got": "^11.5.2",
+    "jdbscan": "^1.0.0",
     "mongoose": "^5.6.9",
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "request-promise-native": "^1.0.7",
+    "sdbscan": "^0.3.3"
   },
   "scripts": {
     "buildDoc": "jsdoc -c jsdoc.json"
